# spack-perf

./: .gitignore  Cargo.toml
.cargo/: config
scripts/: test.sh
src/: main.rs
